--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  @apply h-full overflow-hidden;
+}
+
+body {
+  @apply m-0;
+}
+
+app-root {
+  @apply h-full block;
+}
